# AndoiLLM

./: .editorconfig  .gitignore  .ktlint  CONTRIBUTING.md  DOWNLOAD_FIX_PLAN.md  LICENSE  README.md  compose_stability.conf  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/schemas/: README.md
app/schemas/com.tryptz.neuron.data.local.NeuronDatabase/: 3.json
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tryptz/neuron/: MainActivity.kt  NeuronApp.kt
app/src/main/java/com/tryptz/neuron/code/engine/: QuickJSBridge.kt
app/src/main/java/com/tryptz/neuron/code/sandbox/: CodeExecutor.kt
app/src/main/java/com/tryptz/neuron/data/local/: NeuronDatabase.kt
app/src/main/java/com/tryptz/neuron/data/local/dao/: CodeSnippetDao.kt  ConversationDao.kt  InstalledModelDao.kt  LocalModelDao.kt  MessageDao.kt
app/src/main/java/com/tryptz/neuron/data/local/datastore/: SettingsDataStore.kt
app/src/main/java/com/tryptz/neuron/data/local/entity/: Entities.kt
app/src/main/java/com/tryptz/neuron/data/model/: ModelRegistry.kt
app/src/main/java/com/tryptz/neuron/data/remote/: HuggingFaceClient.kt
app/src/main/java/com/tryptz/neuron/data/repository/: ConversationRepository.kt  ModelRepository.kt
app/src/main/java/com/tryptz/neuron/di/: AppModule.kt  InferenceModule.kt  RepositoryModule.kt
app/src/main/java/com/tryptz/neuron/domain/model/: ChatMessage.kt  ChatTemplate.kt  Conversation.kt  DeviceTelemetry.kt  DownloadProgress.kt  Enums.kt  InferenceSettings.kt  ModelDescriptor.kt  ModelId.kt  Preset.kt
app/src/main/java/com/tryptz/neuron/domain/usecase/: ExecuteCodeUseCase.kt  GenerateResponseUseCase.kt  LoadModelUseCase.kt  SendMessageUseCase.kt
app/src/main/java/com/tryptz/neuron/download/: ModelDownloadWorker.kt
app/src/main/java/com/tryptz/neuron/inference/backend/: BackendResolver.kt  InferenceEngine.kt  InferenceEvent.kt  ModelHandle.kt  PromptFormatter.kt  ThermalManager.kt
app/src/main/java/com/tryptz/neuron/inference/bridge/: LlamaBridge.kt
app/src/main/java/com/tryptz/neuron/service/: InferenceService.kt
app/src/main/java/com/tryptz/neuron/ui/: NeuronNavHost.kt
app/src/main/java/com/tryptz/neuron/ui/animation/: AnimatedComponents.kt  MotionTokens.kt
app/src/main/java/com/tryptz/neuron/ui/chat/: ChatScreen.kt
app/src/main/java/com/tryptz/neuron/ui/chat/components/: ChatBubble.kt  ChatInputBar.kt  ChatTopBar.kt  EmptyState.kt  ModelSelectorSheet.kt  StreamingBubble.kt
app/src/main/java/com/tryptz/neuron/ui/chat/viewmodel/: ChatViewModel.kt
app/src/main/java/com/tryptz/neuron/ui/editor/: CodeEditorScreen.kt
app/src/main/java/com/tryptz/neuron/ui/modelmanager/: ModelManagerScreen.kt
app/src/main/java/com/tryptz/neuron/ui/modelmanager/viewmodel/: ModelManagerViewModel.kt
app/src/main/java/com/tryptz/neuron/ui/settings/: SettingsPanel.kt
app/src/main/java/com/tryptz/neuron/ui/settings/components/: AdvancedSettings.kt  BasicSettings.kt  ExpertSettings.kt  SectionHeader.kt  SettingSlider.kt  SettingToggle.kt
app/src/main/java/com/tryptz/neuron/ui/theme/: Theme.kt  Type.kt
app/src/main/java/com/tryptz/neuron/util/: DeviceMonitor.kt  ExtractCodeBlocks.kt  FormatBytes.kt  FormatDuration.kt  FormatMbAsGb.kt  FormatTokSec.kt  GgufMetadataReader.kt  Validation.kt
app/src/main/jni/: CMakeLists.txt  neuron_inference_jni.cpp  neuron_quickjs_jni.cpp
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/tryptz/neuron/code/sandbox/: CodeExecutorTest.kt
app/src/test/java/com/tryptz/neuron/data/local/datastore/: SettingsMapperTest.kt
app/src/test/java/com/tryptz/neuron/data/model/: ModelRegistryTest.kt
app/src/test/java/com/tryptz/neuron/data/remote/: HuggingFaceClientTest.kt
app/src/test/java/com/tryptz/neuron/data/repository/: ConversationRepositoryTest.kt
app/src/test/java/com/tryptz/neuron/domain/model/: ChatTemplateTest.kt  DownloadProgressTest.kt  ModelIdTest.kt
app/src/test/java/com/tryptz/neuron/domain/usecase/: SendMessageUseCaseTest.kt
app/src/test/java/com/tryptz/neuron/download/: ModelDownloadWorkerProgressTest.kt
app/src/test/java/com/tryptz/neuron/inference/backend/: BackendResolverTest.kt  PromptFormatterTest.kt  ThermalManagerTest.kt
app/src/test/java/com/tryptz/neuron/util/: ExtractCodeBlocksTest.kt  FormatBytesTest.kt  FormatDurationTest.kt  FormatMbAsGbTest.kt  FormatTokSecTest.kt  GgufMetadataReaderTest.kt  ValidationTest.kt
gradle/: libs.versions.toml
